<resources>
    <string name="app_name">Agay</string>
    <string name="harvest">Собрать урожай</string>
    <string name="to_plant">Посадить</string>
    <string name="technics">Техника</string>
    <string name="culture">Культуры</string>
    <string name="tractor">Трактор</string>

    <string name="url_tech">file:///android_asset/technic.html</string>
    <string name="url_culture">file:///android_asset/culture.html</string>
    <string name="url_test">file:///android_asset/Test.html</string>

    <string name="result_fragment">Результаты</string>
    <string name="manual_fragment">Справочник</string>
    <string name="game_fragment">Игра</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>