<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigate"
    app:startDestination="@id/gameFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.deepdweller.agay.fragment.GameFragment"
        android:label="@string/game_fragment"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.deepdweller.agay.fragment.ResultFragment"
        android:label="@string/result_fragment"
        tools:layout="@layout/fragment_result" />
    <fragment
        android:id="@+id/webFragment"
        android:name="com.deepdweller.agay.fragment.WebFragment"
        android:label="Web" />
    <fragment
        android:id="@+id/manualFragment"
        android:name="com.deepdweller.agay.fragment.ManualFragment"
        android:label="@string/manual_fragment"
        tools:layout="@layout/fragment_manual" >
        <action
            android:id="@+id/action_manualFragment_to_webFragment"
            app:destination="@id/webFragment" />
        <argument
            android:name="url"
            android:defaultValue="file:///android_asset/technic.html" />
    </fragment>
</navigation>